[project]
name = "dlfx"
version = "0.1.2"
authors = [
  { name="Theo Dapamede", email="theo.dapamede@emory.edu" },
  { name="Frank Li", email="frank.li@emory.edu" },
]
description = "A collection of utility functions for medical imaging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy<2",
    "pydicom"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/theodapamede/DLUtils"
"Bug Tracker" = "https://github.com/theodapamede/DLUtils/issues"
