[project]
name = "dlfx"
version = "0.1.3.post0"
authors = [
  { name="Theo Dapamede", email="theo.dapamede@emory.edu" },
  { name="Frank Li", email="frank.li@emory.edu" },
]
description = "A collection of utility functions for medical imaging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pydicom"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/theodapamede/dlfx"
"Bug Tracker" = "https://github.com/theodapamede/dlfx/issues"

[tool.hatch.build.targets.wheel]
packages = ["dflx"]