# setup.cfg

[metadata]
name = dlutils
version = 0.1.2
author = Theo Dapamede & Frank Li
author_email = theo.dapamede@emory.edu & frank.li@emory.edu
description = A collection of Python utility functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theodapamede/DLUtils

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib
    numpy<2
    pydicom

[options.packages.find]
where = src